@@ -20,6 +20,9 @@ Revision 4.2.4
 - Example configuration for Net-SNMP's snmptrapd added.
 - Cast additionalVarBinds into ObjectIdentifier type at
   NotificationOriginator.sendNotification()
+- Fixes to ContextEngineId/ContextName support at the oneliner API: now
+  both items can be passed to request PDU right from *Cmd() request initiation
+  method, the items of authData object now used only for USM configuration.
 - Fix to outgoing queue processing order at socket transport. Now
   it's a FIFO discipline rather than LIFO.
 - Fix to NotificationOriginator's additionalVarBinds parameter - it is
